--- a/smb_quiz/static/smb_quiz/style.css
+++ b/smb_quiz/static/smb_quiz/style.css
@@ -67,6 +67,7 @@ a {
 
 .sprite {
     justify-self: center;
+    margin-bottom: 1rem;
 }
 
 .answer-options {
@@ -74,6 +75,11 @@ a {
     grid-template-rows: repeat(3, 1fr);
     row-gap: 1.25rem;
     padding: 0 2rem;
+    margin-bottom: 1rem;
+}
+
+.answer-options p {
+    height: 1rem;
 }
 
 .option {
@@ -81,6 +87,11 @@ a {
     align-items: center;
     column-gap: 1rem;
 }
+
+/*.option a:hover {*/
+/*    background-color: #f1f1f1;*/
+/*    color: #1a1a1a;*/
+/*}*/
 
 footer {
     display: flex;
