--- a/smb_quiz/static/smb_quiz/style.css
+++ b/smb_quiz/static/smb_quiz/style.css
@@ -129,3 +129,9 @@ footer a {
 /*        margin: 0;*/
 /*    }*/
 /*}*/
+
+/* Desktop */
+/*a.btn-rectangle:hover {*/
+/*    background-color: #f1f1f1;*/
+/*    color: #1a1a1a;*/
+/*}*/
