--- a/smb_quiz/templates/smb_quiz/quiz.html
+++ b/smb_quiz/templates/smb_quiz/quiz.html
@@ -26,7 +26,7 @@
                 <a class="btn-circle btn-{{ q.0 }}">C</a>
                 <p>{{ q.2.2 }}</p> {# Shuffled answer #}
             </div>
-            <p id="message-{{ q.0 }}"></p>
+            <p class="message-{{ q.0 }}"></p>
         </div>
     {% endfor %}
     {{ array|json_script:"array" }} {# Array of encoded correct answers for JS file #}
