--- a/smb_quiz/static/smb_quiz/style.css
+++ b/smb_quiz/static/smb_quiz/style.css
@@ -21,7 +21,7 @@ body {
 #container {
     /*background-color: gray;*/
     display: grid;
-    grid-template-rows: repeat(3, max-content);
+    /*grid-template-rows: repeat(3, max-content);*/
     /*justify-items: center;*/
     row-gap: 2rem;
     margin: 1.5rem;
@@ -67,7 +67,7 @@ a {
 
 .sprite {
     justify-self: center;
-    margin-bottom: 1rem;
+    /*margin-bottom: 1rem;*/
 }
 
 .answer-options {
@@ -88,16 +88,66 @@ a {
     column-gap: 1rem;
 }
 
-/*.option a:hover {*/
-/*    background-color: #f1f1f1;*/
-/*    color: #1a1a1a;*/
-/*}*/
+.hidden {
+    display: none;
+}
+
+#score-container {
+    display: flex;
+    flex-direction: column;
+    height: 140px;
+    margin-top: 1rem;
+}
+
+#score-sprite {
+    display: block;
+    /*align-self: center;*/
+    margin: 0 auto;
+}
+
+#calculating-score {
+    display: none;
+    /*width: 100%;*/
+    /*align-self: center;*/
+    margin-top: 9.5%;
+    margin-left: 20%;
+    /*justify-self: center;*/
+    /*text-align: center;*/
+}
+
+#score-results {
+    display: none;
+    flex-direction: column;
+    row-gap: 1rem;
+    align-items: center;
+}
+
+#score-circle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f1f1f1;
+    width: 6rem;
+    height: 6rem;
+    border: 1px solid #f1f1f1;
+    border-radius: 50%;
+}
+
+#score-circle p {
+    font-family: "Press Start 2P", sans-serif;
+    font-size: 1rem;
+    color: #1a1a1a;
+}
+
+#score-message {
+
+}
 
 footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 2rem; /* Make always at bottom */
+    /*margin-top: 2rem; !* Make always at bottom *!*/
 }
 
 footer p {
@@ -112,26 +162,31 @@ footer a {
 }
 
 
-/*@media screen and (max-height: 480px) and (orientation: landscape) and (hover: none) and (pointer: coarse) {*/
-/*    .hide-mobile-landscape {*/
-/*        display: none;*/
-/*    }*/
+@media screen and (pointer: fine) {
+    a.btn-rectangle:hover,
+    a.btn-circle:hover {
+        background-color: #f1f1f1;
+        color: #1a1a1a;
+        cursor: pointer;
+    }
+}
 
-/*    .show-mobile-landscape {*/
-/*        display: block;*/
-/*    }*/
 
-/*    #container {*/
-/*        grid-template-rows: 1fr;*/
-/*        align-items: center;*/
-/*        justify-content: center;*/
-/*        height: 100vh;*/
-/*        margin: 0;*/
-/*    }*/
-/*}*/
+@media screen and (min-width: 500px) {
+    #container {
+        max-width: 500px;
+        margin: 15% auto;
+    }
 
-/* Desktop */
-/*a.btn-rectangle:hover {*/
-/*    background-color: #f1f1f1;*/
-/*    color: #1a1a1a;*/
-/*}*/
+    .btn-rectangle {
+        justify-self: center;
+        width: 350px;
+    }
+}
+
+
+@media screen and (min-width: 1024px) {
+    #container {
+        margin: 150px auto;
+    }
+}
