--- a/smb_quiz/templates/smb_quiz/base.html
+++ b/smb_quiz/templates/smb_quiz/base.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <div id="container">
-        <h1>Super Mario Bros. quiz</h1>
+        <h1><a href="{% url 'smb-quiz-index' %}">Super Mario Bros. quiz</a></h1>
         {% block content %}{% endblock content %}
-    <footer>
-        <p>Written and designed by <a href="#">Peter Jungers</a>, 2023</p>
-        <p>Original pixel art made using in-game sprites as reference</p>
-    </footer>
+        <footer>
+            <p>Written and designed by <a href="#">Peter Jungers</a>, 2023</p>
+            <p>Original pixel art made using in-game sprites as reference</p>
+        </footer>
     </div>
 </body>
 </html>
