JS for images written, sprites begun

--- a/smb_quiz/templates/smb_quiz/base.html
+++ b/smb_quiz/templates/smb_quiz/base.html
@@ -1,3 +1,10 @@
+{% comment %}
+Super Mario Bros. quiz
+Author: Peter Jungers
+Date: December 2022/January 2023
+{% endcomment %}
+
+
 {% load static %}
 
 <!DOCTYPE html>
@@ -19,5 +26,7 @@
             <p>Original pixel art made using in-game sprites as reference</p>
         </footer>
     </div>
+
+    <script src="{% static 'smb_quiz/script.js' %}"></script>
 </body>
 </html>
