--- a/smb_quiz/static/smb_quiz/style.css
+++ b/smb_quiz/static/smb_quiz/style.css
@@ -1,30 +1,36 @@
+/*
+CSS for Super Mario Bros. quiz
+Author: Peter Jungers
+Date: January/February 2023
+*/
+
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Press+Start+2P&display=swap');
 
 
 /* || CSS RESET */
-html, body, header, main, footer, section, h1, h2, h3, h4, p, a, ul, li, table, caption, th, tr, td, img, figure, figcaption {
+html, body, footer, h1, p, a, img {
     margin: 0;
     padding: 0;
     border: 0;
 }
+
+
+/* Default styles are for narrow screens */
+/* || GENERAL STYLES */
+:root {
+    --dark: #1a1a1a;
+    --light: #f1f1f1;
+}
+
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    background-color: #1a1a1a;
-    color: #f1f1f1;
-    /*max-height: 100vh;*/
-}
-
-#container {
-    /*background-color: gray;*/
-    display: grid;
-    /*grid-template-rows: repeat(3, max-content);*/
-    /*justify-items: center;*/
-    row-gap: 2rem;
-    margin: 1.5rem;
+    background-color: var(--dark);
+    color: var(--light);
 }
 
 h1 {
@@ -42,7 +48,15 @@ p {
 
 a {
     text-decoration: none;
-    color: #f1f1f1;
+    color: var(--light);
+}
+
+
+/* || UTILITIES */
+#container {
+    display: grid;
+    row-gap: 2rem;
+    margin: 1.5rem;
 }
 
 .btn-rectangle {
@@ -51,7 +65,7 @@ a {
     text-align: center;
     padding: 1.1rem 1.5rem;
     margin: 1rem 0;
-    border: 1px solid #f1f1f1;
+    border: 1px solid var(--light);
     border-radius: 20px;
 }
 
@@ -61,15 +75,17 @@ a {
     text-align: center;
     padding: 1.1rem;
     padding-left: 1.2rem; /* Necessary because font itself is slightly off-center */
-    border: 1px solid #f1f1f1;
+    border: 1px solid var(--light);
     border-radius: 50%;
 }
 
 .sprite {
     justify-self: center;
-    /*margin-bottom: 1rem;*/
+    width: 75px;
 }
 
+
+/* || QUESTION STYLES */
 .answer-options {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
@@ -88,10 +104,8 @@ a {
     column-gap: 1rem;
 }
 
-.hidden {
-    display: none;
-}
 
+/* || SCORE STYLES */
 #score-container {
     display: flex;
     flex-direction: column;
@@ -101,18 +115,14 @@ a {
 
 #score-sprite {
     display: block;
-    /*align-self: center;*/
     margin: 0 auto;
+
 }
 
 #calculating-score {
     display: none;
-    /*width: 100%;*/
-    /*align-self: center;*/
     margin-top: 9.5%;
-    margin-left: 20%;
-    /*justify-self: center;*/
-    /*text-align: center;*/
+    margin-left: 21%;
 }
 
 #score-results {
@@ -126,28 +136,25 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #f1f1f1;
+    background-color: var(--light);
     width: 6rem;
     height: 6rem;
-    border: 1px solid #f1f1f1;
+    border: 1px solid var(--light);
     border-radius: 50%;
 }
 
 #score-circle p {
     font-family: "Press Start 2P", sans-serif;
     font-size: 1rem;
-    color: #1a1a1a;
+    color: var(--dark);
 }
 
-#score-message {
 
-}
-
+/* || FOOTER */
 footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /*margin-top: 2rem; !* Make always at bottom *!*/
 }
 
 footer p {
@@ -162,16 +169,18 @@ footer a {
 }
 
 
+/* || MEDIA QUERIES */
+/* Pointer fine */
 @media screen and (pointer: fine) {
     a.btn-rectangle:hover,
     a.btn-circle:hover {
-        background-color: #f1f1f1;
-        color: #1a1a1a;
+        background-color: var(--light);
+        color: var(--dark);
         cursor: pointer;
     }
 }
 
-
+/* Min-width 500 viewport */
 @media screen and (min-width: 500px) {
     #container {
         max-width: 500px;
@@ -182,9 +191,13 @@ footer a {
         justify-self: center;
         width: 350px;
     }
+
+    #calculating-score {
+        margin-left: 30%;
+    }
 }
 
-
+/* Min-width 1024 viewport */
 @media screen and (min-width: 1024px) {
     #container {
         margin: 150px auto;
