--- a/smb_quiz/templates/smb_quiz/index.html
+++ b/smb_quiz/templates/smb_quiz/index.html
@@ -1,19 +1,11 @@
 {% extends "smb_quiz/base.html" %}
+{% load static %}
 
 {% block content %}
-    <div class="sprite">
-        Mushroom<br>
-        Mushroom<br>
-        Mushroom<br>
-    </div>
+    <img class="sprite" src="" alt="Pixel art">
     <p>
         Welcome to the Super Mario Bros. quiz! The quiz consists of ten randomly chosen questions about Super Mario Bros., Super Mario Bros. 2, and Super Mario Bros. 3—all from the Nintendo Entertainment System. You will have one opportunity to answer each question. If you get the answer wrong, don't worry! The answer will remain hidden, though, so you can try to get it right another time. Your final score will be tallied after all questions have been answered. Ready?
     </p>
     <a class="btn-rectangle" href="{% url 'smb-quiz-quiz' %}">Press start</a>
-    <div class="sprite">
-        Mario<br>
-        Mario<br>
-        Mario<br>
-    </div>
-
+    <img class="sprite" src="" alt="Pixel art">
 {% endblock content %}
