Images finished, model written, db data entry begun, quiz view modification for db objects

--- a/smb_quiz/templates/smb_quiz/quiz.html
+++ b/smb_quiz/templates/smb_quiz/quiz.html
@@ -28,7 +28,7 @@
     {% endfor %}
 
     <div id="score-container">
-        <img id= "score-sprite" class="sprite" src="" alt="Pixel art">
+        <img id= "score-sprite" src="{% static 'smb_quiz/images/bowser.png' %}" alt="Pixel art">
         <p id="calculating-score">Calculating your score<span id="dots"></span></p>
         <div id="score-results">
             <div id="score-circle"><p></p></div>
