--- a/smb_quiz/static/smb_quiz/style.css
+++ b/smb_quiz/static/smb_quiz/style.css
@@ -19,7 +19,7 @@ html, body, footer, h1, p, a, img {
 /* Default styles are for narrow screens */
 /* || GENERAL STYLES */
 :root {
-    --dark: #1a1a1a;
+    --dark: #292929;
     --light: #f1f1f1;
 }
 
@@ -51,6 +51,11 @@ a {
     color: var(--light);
 }
 
+/*img {*/
+/*    !*width: 100%;*!*/
+/*    height: 100%;*/
+/*}*/
+
 
 /* || UTILITIES */
 #container {
@@ -68,6 +73,14 @@ a {
     border: 1px solid var(--light);
     border-radius: 20px;
 }
+
+/*.margin-1-top-btm {*/
+/*    margin: 1rem 0;*/
+/*}*/
+
+/*.margin-1-btm {*/
+/*    margin-bottom: 1rem;*/
+/*}*/
 
 .btn-circle {
     font-family: "Press Start 2P", sans-serif;
@@ -90,7 +103,7 @@ a {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     row-gap: 1.25rem;
-    padding: 0 2rem;
+    padding-left: 2rem;
     margin-bottom: 1rem;
 }
 
@@ -104,17 +117,23 @@ a {
     column-gap: 1rem;
 }
 
+.option p {
+    height: fit-content;
+}
+
 
 /* || SCORE STYLES */
 #score-container {
     display: flex;
     flex-direction: column;
-    height: 140px;
-    margin-top: 1rem;
+    height: 150px;
+    /*margin-top: 1rem;*/
 }
 
 #score-sprite {
     display: block;
+    width: 150px;
+    height: 150px;
     margin: 0 auto;
 
 }
