--- a/smb_quiz/templates/smb_quiz/base.html
+++ b/smb_quiz/templates/smb_quiz/base.html
@@ -11,9 +11,10 @@ Date: December 2022/January 2023
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="">
+    <meta name="description" content="Quiz for Super Mario Bros. games on the Nintendo Entertainment System">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'smb_quiz/style.css' %}">
+    <link rel="icon" href="data:;base64,iVBORwOKGO="/>  {# For Chrome favicon console error #}
 
     <title>Super Mario Bros. quiz</title>
 </head>
