--- a/smb_quiz/templates/smb_quiz/base.html
+++ b/smb_quiz/templates/smb_quiz/base.html
@@ -23,7 +23,7 @@ Date: December 2022/January 2023
         <h1><a href="{% url 'smb-quiz-index' %}">Super Mario Bros. quiz</a></h1>
         {% block content %}{% endblock content %}
         <footer>
-            <p>Written and designed by <a href="#">Peter Jungers</a>, 2023</p>
+            <p>Written and designed by <a href="https://github.com/peterjungers/smb_quiz" target="_blank">Peter Jungers</a>, 2023</p>
             <p>Original pixel art made using in-game sprites as reference</p>
         </footer>
     </div>
