--- a/smb_quiz/templates/smb_quiz/base.html
+++ b/smb_quiz/templates/smb_quiz/base.html
@@ -15,6 +15,11 @@ Date: December 2022/January 2023
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'smb_quiz/style.css' %}">
     <link rel="icon" href="data:;base64,iVBORwOKGO="/>  {# For Chrome favicon console error #}
+    <!-- For iPhone message thumbnail -->
+    <meta property="og:title" content="Super Mario Bros. quiz">
+    <meta property="og:type" content="image.png">
+    <meta property="og:url" content="https://peterjungers.pythonanywhere.com/smb_quiz">
+    <meta property="og:image" content="{% static 'smb_quiz/images/bowser.png' %}">
 
     <title>Super Mario Bros. quiz</title>
 </head>
